docs: use LawnGreen instead of LimeGreen

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -32,7 +32,7 @@
             {% endif %}
             </div>
         <div>
-            <a href="{{ site.baseurl }}{{ post.url }}" class="button has-text-black" style="background-color: limegreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="button has-text-black" style="background-color: LawnGreen;">{{ site.data[site.active_lang].strings.post_read_full }}</a>
         </div>
     </div>
 </div>
