--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,6 +1,6 @@
 <!--   
 <div class="has-text-centered">
-    <a href="{{ site.baseurl }}/feed.xml" type="application/rss+xml" class="button" style="background-color: limegreen;">
+    <a href="{{ site.baseurl }}/feed.xml" type="application/rss+xml" class="button" style="background-color: LawnGreen;">
         <span>Subscribe</span>
     </a>
 </div>
