Refactor Benefactor Circle add-on styling across multiple documents
- Updated the styling of the "Benefactor Circle add-on" text to use a solid color (darkgoldenrod) instead of a gradient background for better readability and consistency across various markdown files.
- Modified references in the following files: benefactorcircle.en.md, download.de.md, download.en.md, features.de.md, features.en.md, implementationapproach.de.md, implementationapproach.en.md, index.de.md, index.en.md, quickstart.de.md, quickstart.en.md, support.de.md, and support.en.md.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -247,8 +247,6 @@ a.mtrcs-external-link:not(.no-external-link-icon)::after {
   vertical-align: top;
 }
 
-
-
 :root {
   --benefactor-circle-color: darkgoldenrod;
 }
@@ -260,6 +258,7 @@ a.mtrcs-external-link:not(.no-external-link-icon)::after {
   }
 }
 
-[data-theme="dark"], .theme-dark {
+[data-theme="dark"],
+.theme-dark {
   --benefactor-circle-color: goldenrod;
 }
