--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -112,9 +112,12 @@ h6:hover .anchor-link {
   opacity: 1;
 }
 
-.content h2 ~ h2,
-.content * ~ h2 {
+.content h2 {
   margin-top: 3rem;
+}
+
+.content h2:first-of-type {
+  margin-top: revert;
 }
 
 .content h6 {
