style(app.scss): Adjust margin for subsequent h2 elements in content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -113,11 +113,11 @@ h6:hover .anchor-link {
 }
 
 .content h2 {
-  margin-top: 3rem;
+  margin-top: 3em;
 }
 
 .content h6 {
-  margin-bottom: 0rem;
+  margin-bottom: 0em;
 }
 
 .content ul:not(:first-child),
