--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -112,8 +112,12 @@ h6:hover .anchor-link {
   opacity: 1;
 }
 
-.content h2:not(:first-child) {
-  margin-top:3em
+.content h2 {
+  margin-top: 3rem;
+}
+
+.content h2:first-of-type {
+  margin-top: revert;
 }
 
 .content h6 {
