style(app.scss): Adjust margin for subsequent h2 elements in content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -113,11 +113,11 @@ h6:hover .anchor-link {
 }
 
 .content h2 {
-  margin-top: 3rem;
+  margin-top: 3em; /* !important; /* Only use !important if Bulma is fighting you */
 }
 
-.content h2:first-of-type {
-  margin-top: revert;
+.content > *:first-child h2 {
+  margin-top: revert; /* !important; */
 }
 
 .content h6 {
