--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -74,8 +74,8 @@ h6 {
 
 .button {
   white-space: normal;
-  word-break: break-word;
-  hyphens: auto;
+  word-break: normal;
+  hyphens: manual;
 }
 
 .anchor-link {
