Revert "fix(button): adjust word-breaking and hyphenation styles"
This reverts commit 10bec036dbde7e61123ef65e65142119b64de90a.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -74,8 +74,8 @@ h6 {
 
 .button {
   white-space: normal;
-  word-break: normal;
-  hyphens: manual;
+  word-break: break-word;
+  hyphens: auto;
 }
 
 .anchor-link {
