fix(docs): remove empty navigation items for improved clarity

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,11 +38,9 @@
                                 </div>
                             </div>
                         {% elsif item.link %}
-                            <a href="{{ item.link | relative_url }}"
-                                class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{
-                                item.name }}</a>
+                            <a href="{{ item.link | relative_url }}" class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
                         {% else %}
-                            {{ item.name | markdownify }}
+                            <a class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
                         {% endif %}
                     {% endfor %}
                 {% endif %}
