fix(docs): remove empty navigation items for improved clarity

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
                         {% elsif item.link %}
                             <a href="{{ item.link | relative_url }}" class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
                         {% else %}
-                            <a class="navbar-item has-text-white {% if page.url contains item.link %}is-selected{% endif %}">{{ item.name }}</a>
+                            <a class="navbar-item has-text-white">{{ item.name }}</a>
                         {% endif %}
                     {% endfor %}
                 {% endif %}
