docs: update navbar z-index

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar is-primary {% if site.fixed_navbar %} is-fixed-{{ site.fixed_navbar }} {% endif %}"
-    x-data="{ openNav: false }">
-    <div class="container" style="z-index: 500;">
+    x-data="{ openNav: false }" style="position: relative; z-index: 500;">
+    <div class="container">
         <div class="navbar-brand">
             <a href="{{ site.baseurl }}/" class="navbar-item has-text-white">
                 <img src="{{ site.navbar_logo }}" alt="{{ site.navbar_logo_alt }}">
